--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,50 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+
 :root {
-  
+  --color-bg-primary: #fff;
+  --color-bg-secondary: #2d28ff;
+  --color-bg-tertiary: #c7c7c7;
+
+  --color-font-primary: #000;
+  --color-font-secondary: #fff;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Inter";
+}
+
+body {
+  background-color: var(--color-bg-primary);
+}
+
+a,
+a:hover {
+  text-decoration: none;
+  color: unset;
+}
+
+.container {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.dflex {
+  display: flex;
+}
+
+.menu-active {
+  font-weight: 700;
+}
+
+.mt20 {
+  margin-top: 20px;
+}
+
+ul {
+  list-style: none;
+  margin-top: 20px;
 }
